--- a/index.html
+++ b/index.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>Conversor Interestelar</title>
+    <meta name="title" content="Conversor Interestelar" />
+    <meta
+      name="description"
+      content="Conversor Interestelar para converter anos luz em metros."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://elisandralopes.github.io/conversor-interestelar/"
+    />
+    <meta property="og:title" content="Conversor Interestelar" />
+    <meta
+      property="og:description"
+      content="Conversor Interestelar para converter anos luz em metros."
+    />
+    <meta property="og:image" content="./preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://elisandralopes.github.io/conversor-interestelar/"
+    />
+    <meta property="twitter:title" content="Conversor Interestelar" />
+    <meta
+      property="twitter:description"
+      content="Conversor Interestelar para converter anos luz em metros."
+    />
+    <meta property="twitter:image" content="./preview.png" />
+
     <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,38 +47,38 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;1,200&display=swap"
       rel="stylesheet"
     />
-    <title>Conversor Interestelar</title>
   </head>
   <body>
-    <div class="container-title">
-      <h1 class="page-title">Conversor Interestelar</h1>
+    <div class="page-container">
+      <div class="container-title">
+        <h1 class="page-title">Conversor Interestelar</h1>
 
-      <img
-        src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg"
-        class="page-logo"
-        alt=""
-      />
-    </div>
-    <div>
-      <a href="https://alura.com.br/" target="_blank">
         <img
-          src="https://www.alura.com.br/assets/img/home/alura-logo.svg"
+          src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg"
+          class="page-logo"
           alt=""
-          class="alura-logo"
         />
-      </a>
-    </div>
-
-    <div class="container-calculo">
-      <h3>Anos luz para metros</h3>
-      <div class="form">
-        <label for="anosLuzInput">Quantidade de Anos luz</label>
-        <input type="text" id="anosLuzInput" placeholder="" />
-        <button id="convertButton">Converter</button>
       </div>
-      <div id="result"></div>
-    </div>
+      <div>
+        <a href="https://alura.com.br/" target="_blank">
+          <img
+            src="https://www.alura.com.br/assets/img/home/alura-logo.svg"
+            alt=""
+            class="alura-logo"
+          />
+        </a>
+      </div>
 
+      <div class="container-calculo">
+        <h3>Anos luz para metros</h3>
+        <div class="form">
+          <label for="anosLuzInput">Quantidade de Anos luz</label>
+          <input type="text" id="anosLuzInput" placeholder="" />
+          <button id="convertButton">Converter</button>
+        </div>
+        <div id="result"></div>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
