Fixed meta tags image path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       property="og:description"
       content="Conversor Interestelar para converter anos luz em metros."
     />
-    <meta property="og:image" content="./preview.png" />
+    <meta property="og:image" content="/preview.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -37,7 +37,7 @@
       property="twitter:description"
       content="Conversor Interestelar para converter anos luz em metros."
     />
-    <meta property="twitter:image" content="./preview.png" />
+    <meta property="twitter:image" content="/preview.png" />
 
     <link rel="stylesheet" href="./style.css" />
 
